# DeepMoon

./: .flake8  .gitignore  README.md  pyproject.toml
configs/: default.yaml
deepmoon/: __init__.py  config.py
deepmoon/data/: __init__.py  dataset.py  transforms.py
deepmoon/models/: __init__.py  attention_unet.py  layers.py  trans_unet.py
deepmoon/postprocessing/: __init__.py  coordinate_transform.py  crater_extraction.py  template_match.py
deepmoon/training/: __init__.py  losses.py  metrics.py  trainer.py
deepmoon/utils/: __init__.py  processing.py  seed.py
scripts/: .env.example  download_training_data.py  patch_cli.js  predict.py  proxy_test.py  run_claude.py  test_api.py  test_api_v2.py  train.py
tests/: conftest.py  test_crater_extraction.py  test_dataset.py  test_losses.py  test_models.py  test_seed.py  test_transforms.py
